--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,5 +11,7 @@ spring:
     url: jdbc:mysql://192.168.199.144/sell?characterEncoding=utf-8&useSSL=false
   jpa:
     show-sql: true
+server:
+  context-path: /sell
 
 
